--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <div class="card">
                     <img src="images/illustrators/illustrator-2.png" alt="">
                     <h3>Vission</h3>
-                    <p class="para-text">My mission is to be a good programmer.I am going to learn basic concept of Object oriented Programming Language.And to help very poor person is my another mission in 2022 </p>
+                    <p class="para-text">I see myself as a responsible person.So,I want to work hard and to help the helpless persons.And I want ot go beyond my own position</p>
                 </div>
                 <div class="card coral-color">
                     <img src="images/illustrators/illustrator-3.png" alt="">
