--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <div class="card blue-color">
                     <img src="images/illustrators/illustrator-1.png" alt="">
                     <h3>Mission</h3>
-                    <p class="para-text">My mission is to be a good programmer.I am going to learn basic concept of Object oriented Programming Language.And to help very poor person is my another mission in 2022
+                    <p class="para-text">I plan to study for all my all test and pass my final exam and complete this cource nicely.
                     </p>
                 </div>
                 <div class="card">
