--- a/index.html
+++ b/index.html
@@ -58,7 +58,9 @@
                 <div class="card coral-color">
                     <img src="images/illustrators/illustrator-3.png" alt="">
                     <h3>Goal</h3>
-                    <p class="para-text">My mission is to be a good programmer.I am going to learn basic concept of Object oriented Programming Language.And to help very poor person is my another mission in 2022</p>
+                    <p class="para-text">
+                        I will complete this cource nicely.This cource will help me to be a junior web devoloper.Because I want to be a good softower engineer in future.
+                    </p>
                 </div>
                </div>
             </div>
