some wrong correction

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
                 <div class="dev-right">
                     <h2 class="dev-h2">
                         <span class="dis-block">The case for public-private partnership</span>
-                        <span class="dis-block">partnership in education</span>
+                        <span class="dis-block">in education</span>
                     </h2>
                     <p class="para-text dev-p"> 
                         Bangladesh is a land of opportunities. There has always been a lively debate on the possible direction of the nation’s economy. Sometimes it appears as a myth that can surprise many, to see that the economy is still growing in a respectful fashion; maybe not in a planned manner, but the bottom line is the economy is expanding despite barriers. The consumption pattern is changing and is on the rise, and the economy has a substantial amount of prospects for further and rapid growth.
