add my career section

--- a/index.html
+++ b/index.html
@@ -99,7 +99,36 @@
                 </div>
             </div>
 
+            <!-- My Career Section -->
+        <div class="career-section flex-container margin-top">
+           <div class="ca-para">
+            <h2>
+                My Career So Far
+            </h2>
+            <p class="para-text">
+                Always up to for challenge.I have worked for lean start-ups and was member of the first New Zealand start-ups to attend Y combinator. The largest start-up occelerator in the world.From there, I worded my way up to Art nDirector and Team Lead at Appster where I orersow the desigh of 30+ mobile and desktop apps,Currently I lead Us/ux desigh of Saas atart-up VideoMyJOb 
+            </p>
+           </div>
+           <div class="experience">
+               <ul>
+                   <li>UI DESIGN</li>
+                   <li>UX DESIGN</li><br><br>
+                   <li>PHOTYPING</li>
+                   <li>BRANDING</li><br><br>
+                   <li>HTML/CSS</li>
+                   <li>WIREFRAMING</li><br><br>
+                   <li>INFORMATION ARCHITECTURE</li><br><br>
+                   <li>USER RESARCH</li>
+                   <li>LEADERSHIP</li><br><br>
+                   <li>SKETCH</li>
+                   <li>ADOBE SUITE</li><br><br>
+               </ul>
+           </div>
         </div>
+
+        </div>
+        
+        <!-- Footer section -->
         <div class="footer-section margin-top">
             <div class="footer">
                 <h2>
